After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702650 - Notify about caret navigation errors using the error bell
Notify about caret navigation errors using the error bell
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks: 677348
 
 
Reported: 2013-06-19 12:24 UTC by Carlos Garcia Campos
Modified: 2013-06-19 16:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use the error bell to notify about caret navigation errors (874 bytes, patch)
2013-06-19 15:08 UTC, Antía Puentes
committed Details | Review

Description Carlos Garcia Campos 2013-06-19 12:24:14 UTC
When a cursor movement requested by the user can't be done (moving backwards while in the first position, etc.) we should notify the user using the error bell (see gtk_widget_error_bell())
Comment 1 Antía Puentes 2013-06-19 15:08:55 UTC
Created attachment 247266 [details] [review]
Use the error bell to notify about caret navigation errors
Comment 2 Carlos Garcia Campos 2013-06-19 16:32:45 UTC
Comment on attachment 247266 [details] [review]
Use the error bell to notify about caret navigation errors

Pushed to git master, thanks!