libview: Notify about caret navigation errors using the error bell.

https://bugzilla.gnome.org/show_bug.cgi?id=702650